setup-scripts/40-nexus/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: nexus
spec:
  ingressClassName: nginx
  tls:
    - secretName: nexus-ssl
      hosts:
      - nexus.vps-2.cluster-4.de          
  rules:
  - host: "nexus.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nexus-service
              port:
                number: 80
